--- a/react-app/src/components/watchlist/watchlistPanel.css
+++ b/react-app/src/components/watchlist/watchlistPanel.css
@@ -12,7 +12,7 @@
 }
 
 .wlp-add-div:hover{
-    color: #d154ff;
+    color: #1883fd;
     cursor: pointer;
 }
 
@@ -23,6 +23,7 @@
 .wlp-title{
     font-size: 16px;
     font-weight: bold;
+
 }
 
 .wlp-top{
@@ -32,8 +33,8 @@
     height: 50px;
     justify-content: space-between;
     align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 5px;
+    padding-right: 14px;
     width: 100%;
     /* border-bottom: 1px solid #00da86; */
 
